# dotnation

./: .env.vercel  .gitignore  .vercelignore  BACKEND_MAINNET_READINESS.md  BACKEND_MAINNET_READINESS_OLD.md  BACKEND_TESTNET_GUIDE.md  CAPTCHA_INTEGRATION.md  CI_CD_SETUP.md  CONTRACT_STATUS_RESOLVED.md  CONTRIBUTING.md  CREATOR_ECONOMY_URGENCY_ANALYSIS.md  DEMO_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DotNation_Whitepaper.md  FEATURES.md  FRESH_DEPLOYMENT_GUIDE.md  FRONTEND_FIXES_PROGRESS.md  FRONTEND_MIGRATION_GUIDE.md  FRONTEND_MISSING_ANALYSIS.md  HACKATHON_SUBMISSION.md  HACKATHON_VIDEO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEW_FRONTEND_IMPLEMENTATION.md  Procfile  QUICKSTART.md  README.html  README.md  SCALABILITY_ROADMAP.md  SECURITY.md  STORAGE_DEPOSIT_FIX.md  SUBMISSION_CHECKLIST.md  TESTNET_DEPLOYMENT_CHECKLIST.md  TESTNET_TESTING_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  WORKFLOW_IMPROVEMENTS.md  WalletConnect.js  dotnation_presentation.html  package-lock.json  package.json  (+6 more)
.github/: SETUP_CHECKLIST.md  WORKFLOWS.md  copilot-instructions.md
.husky/: pre-commit
donation_nft_contract/: Cargo.toml
donation_nft_contract/src/: lib.rs
donation_platform/: Cargo.toml  SCALABILITY_GUIDE.md  UPGRADE_GUIDE.md  donation_nft.rs  lib.rs  package-lock.json  proxy.rs
donation_platform/.cargo/: audit.toml
frontend/: .env.example  .env.local.backup  .env.production.example  .eslintrc.cjs  .vercelignore  dummydashboard.html  index.html  lighthouserc.js  lint_output.txt  lint_output_final.txt  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
gemini-backend/: .dockerignore  .env.example  .env.production  .env.testnet  BACKEND_STATUS_REPORT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  QUICK_DEPLOY_GUIDE.md  README.md  REDIS_POSTS_MIGRATION.md  REDIS_SETUP.md  captchaVerification.js  contractAuditor.js  docker-compose.yml  fraudDetection.js  fraudDetection.test.js  logger.js  membersRoutes.js  package-lock.json  package.json  redisClient.js  server.js  test-posts-redis.js  test_gemini.js  validation.js  verify_backend.js
hello-polkadot/: Cargo.toml  lib.rs
scripts/: build_contracts.sh  check-contract-exists.js  check-mandala-contracts-support.js  check_contract_state.js  check_deployed_contract.js  create_test_campaign.js  decode_error.js  decode_error_debug.js  decode_error_simple.js  decode_error_v2.js  decode_error_v3.js  decode_module_error.js  enable_nft.js  quick-test-mandala.sh  test-contract.sh  test-local.sh  test-members.js  test-recaptcha.js  test-security-headers.sh  test-xcm-route.js  test_deployed_contract.js  test_empty_address.js  test_fixed_implementation.js  test_fixed_storage.js  test_max_storage.js  test_query.js  test_query2.js  test_storage_deposit.js  test_undefined_storage.js  test_with_alice.js  verify_nft_setup.js
subscription_manager/: Cargo.toml  lib.rs
temp_proxy/: Cargo.toml  lib.rs
temp_v2/: lib.rs  (+1 more)
(+161 files in other folders)
